T3 - Building a Landing Page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,9 @@
 body {
 	background-color: #f7f7f7;
 }
+.navbar {
+	margin-bottom: 0px;
+}
 
 .btn, .btn:active, .btn-primary:active, .btn-default:active, .btn.active, .btn:focus, .btn:hover {
 	background-color: #00b22d;
@@ -69,9 +72,52 @@ select {
 	pointer-events:none;
 }
 
+.hero {
+	background: image-url('header-bg.jpg') no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover; 
+	height: 500px;
+	text-align: center;
+}
 
+.hero-heading {
+	color: #fff;
+	margin-top: 100px;
+	font-size: 37px;
+	font-weight: 600;
+}
 
+.hero-heading p {
+	font-weight: 400;
+	font-size: 24px;
+}
 
+.section h1 {
+	margin: 40px 0px;
+	text-align: center;
+}
+
+.gig-card {
+	background-color: #fff;
+	width: 228px;
+	height: 260px;
+	border: 1px #e5e5e5 solid;
+	margin: 0 auto 20px auto;
+	padding: 0;
+}
+
+.gig-card h4 {
+	padding: 10px;
+	font-weight: 400;
+}
+
+.gig-card h3 {
+	color: #00b22d;
+	padding: 0px 10px;
+	font-size: 19px;
+}
 
 
 
