--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,101 @@
-<div class="container">
-	<h1>Welcome to Sixerr</h1>
-	<p>Find me in app/views/pages/home.html.erb</p>
+<div class="hero">
+	<div class="container">
+		<div class="row">
+			<div class="hero-heading">
+				What do you need done? <br/>
+				Find it on Sixerr. 
+				<p>Browse. Buy. Done. </p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-offset-3 col-md-6">
+				<form>
+					<div class="input-group input-group-lg">
+						<input type="text" class="form-control" placeholder="What are you looking for..."> 
+						<span class="input-group-btn">
+							<button class="btn btn-default" type="button">
+								Find Services
+							</button>
+						</span>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
 </div>
+<div class="container section">
+	<h1>
+		Newest Gigs
+	</h1>
+	<div class="row">
+		<div class="col-md-3">
+			<div class="gig-card">
+				<%= image_tag 'blog.jpg' %>
+				<h4>
+					I will write 300 words blog posts
+				</h4>
+				<h3>
+					$6
+				</h3>
+			</div>
+		</div>
+		<div class="col-md-3">
+			<div class="gig-card">
+				<%= image_tag 'data.jpg' %>
+				<h4>
+					I will be your virtual assistant for data entry
+				</h4>
+				<h3>
+					$6
+				</h3>
+			</div>
+		</div>
+		<div class="col-md-3">
+			<div class="gig-card">
+				<%= image_tag 'copywrite.jpg' %>
+				<h4>
+					I will copywrite for your website
+				</h4>
+				<h3>
+					$6
+				</h3>
+			</div>
+		</div>
+		<div class="col-md-3">
+			<div class="gig-card">
+				<%= image_tag 'lyrics.jpg' %>
+				<h4>
+					I will create a song for your lyrics
+				</h4>
+				<h3>
+					$6
+				</h3>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
